# WebSocketRelayServer

./: .gitignore  Dockerfile  README.md  default.conf  nginx.conf  pyproject.toml
src/: main.py  server.conf  tornado_options.py
src/module/: account_handler.py  account_hundler.py  controller_handler.py  create_tables.py  password_hash.py  relay_handler.py  relay_pair.py  root_handler.py  tables.py  token_handler.py  ws_relay_handler.py  ws_relay_hundler.py
src/static/css/: base.css
src/static/js/: motion.js
src/templates/: controller.html  index.html
