[tool.poetry]
name = "websocket-camera-controll-server"
version = "0.1.0"
description = ""
authors = ["Takahiro55555 <tkhr.corei7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"
bcrypt = "^3.1.7"
sqlalchemy = "^1.3.15"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
